Fixed horizontal scroll

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -18,7 +18,7 @@
 html,
 body {
   max-width: 100vw;
-  // overflow-x: hidden;
+  overflow-x: hidden;
   background-color: #030303;
   background-color: rgb(255, 255, 255);
   // background-color: #f5f5f5;
